Prevent links in header from wrapping

--- a/src/ui/Header.css
+++ b/src/ui/Header.css
@@ -62,6 +62,7 @@ header {
     a {
       display: flex;
       align-items: center;
+      text-wrap: nowrap;
 
       svg {
         margin-right: 5px;
